# ps-lenses-hs

./: .gitattributes  .gitignore  LICENSE  README.md  fourmolu.yaml  malens.cabal  pslens.cabal
src/: Domain.hs  Err.hs  MALens.hs  MALens2.hs  MALensTH.hs  PSLens.hs  PSLensTH.hs  SymmetricLens.hs
src/MALens/: Examples.hs
src/MALens/Examples/: Dup.hs  List.hs  M.hs  MapKeyT.hs  Snapshotting.hs
src/PSLens/Examples/: Tasks.hs
