cabal-version:      3.0
name:               malens
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Kazutaka Matsuda
maintainer:         kztk@tohoku.ac.jp
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MALens, MALens.Examples
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0, containers
    hs-source-dirs:   src
    default-language: Haskell2010
