cabal-version:      3.0
name:               malens
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Kazutaka Matsuda
maintainer:         kztk@tohoku.ac.jp
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MALens, Err, Domain
    other-modules:    MALens.Examples.Snapshotting, MALens.Examples.Dup 
    -- other-extensions:
    build-depends:    base ^>=4.17 || ^>=4.18, containers, mtl 
    hs-source-dirs:   src
    default-language: Haskell2010
